Fix spacing issues in 'Airbnb Strengths' and 'Crazy 8s' sections in postup.html

--- a/src/scss/postup/_airbnb-strengths.scss
+++ b/src/scss/postup/_airbnb-strengths.scss
@@ -61,7 +61,6 @@
 		align-items: center;
 		width: fit-content;
 		padding: 1.75rem;
-		padding-top: 2.34rem;
 		gap: 2rem;
 		border: 1px solid $medium-light-grey;
 		border-radius: 10px;
