--- a/src/scss/postup/_day-02.scss
+++ b/src/scss/postup/_day-02.scss
@@ -16,15 +16,15 @@
 	align-items: center;
 	justify-content: center;
 	gap: 2.5rem;
-	margin-bottom: 2rem;
+	margin: 2rem 0;
 
 	img {
 		width: 100%;
 	}
 
-	@include breakpoint(xl) {
+	@include breakpoint(lg) {
 		// flex-direction: row;
 		// width: fit-content;
-		margin-bottom: 2.5rem;
+		margin: 2.5rem 0;
 	}
 }
